--- a/package.json
+++ b/package.json
@@ -1,16 +1,5 @@
 {
-  "name": "svg-logo-maker",
-  "version": "1.0.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "main": "index.js",
-  "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
-      "jest": "^29.5.0"
-  },
-  "keywords": []
-
+    "express": "^4.18.2"
+  }
 }
